punto2/ASDR/punto2GrammarParser.java
// Generated from java-escape by ANTLR 4.11.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class punto2GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, WS=8;
	public static final int
		RULE_punto2Grammar = 0, RULE_s = 1, RULE_a = 2, RULE_b = 3, RULE_c = 4, 
		RULE_bprima = 5, RULE_uno = 6, RULE_dos = 7, RULE_tres = 8, RULE_cuatro = 9, 
		RULE_cinco = 10, RULE_seis = 11, RULE_siete = 12;
	private static String[] makeRuleNames() {
		return new String[] {
			"punto2Grammar", "s", "a", "b", "c", "bprima", "uno", "dos", "tres", 
			"cuatro", "cinco", "seis", "siete"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'uno'", "'dos'", "'tres'", "'cuatro'", "'cinco'", "'seis'", "'siete'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public punto2GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Punto2GrammarContext extends ParserRuleContext {
		public SContext s() {
			return getRuleContext(SContext.class,0);
		}
		public Punto2GrammarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_punto2Grammar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof punto2GrammarListener ) ((punto2GrammarListener)listener).enterPunto2Grammar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof punto2GrammarListener ) ((punto2GrammarListener)listener).exitPunto2Grammar(this);
		}
	}

	public final Punto2GrammarContext punto2Grammar() throws RecognitionException {
		Punto2GrammarContext _localctx = new Punto2GrammarContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_punto2Grammar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(26);
			s();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SContext extends ParserRuleContext {
		public BContext b() {
			return getRuleContext(BContext.class,0);
		}
		public UnoContext uno() {
			return getRuleContext(UnoContext.class,0);
		}
		public DosContext dos() {
			return getRuleContext(DosContext.class,0);
		}
		public CContext c() {
			return getRuleContext(CContext.class,0);
		}
		public SContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_s; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof punto2GrammarListener ) ((punto2GrammarListener)listener).enterS(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof punto2GrammarListener ) ((punto2GrammarListener)listener).exitS(this);
		}
	}

	public final SContext s() throws RecognitionException {
		SContext _localctx = new SContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_s);
		try {
			setState(35);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(28);
				b();
				setState(29);
				uno();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(31);
				dos();
				setState(32);
				c();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AContext extends ParserRuleContext {
		public List<BContext> b() {
			return getRuleContexts(BContext.class);
		}
		public BContext b(int i) {
			return getRuleContext(BContext.class,i);
		}
		public UnoContext uno() {
			return getRuleContext(UnoContext.class,0);
		}
		public TresContext tres() {
			return getRuleContext(TresContext.class,0);
		}
		public List<CContext> c() {
			return getRuleContexts(CContext.class);
		}
		public CContext c(int i) {
			return getRuleContext(CContext.class,i);
		}
		public DosContext dos() {
			return getRuleContext(DosContext.class,0);
		}
		public CuatroContext cuatro() {
			return getRuleContext(CuatroContext.class,0);
		}
		public AContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_a; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof punto2GrammarListener ) ((punto2GrammarListener)listener).enterA(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof punto2GrammarListener ) ((punto2GrammarListener)listener).exitA(this);
		}
	}

	public final AContext a() throws RecognitionException {
		AContext _localctx = new AContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_a);
		try {
			setState(55);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(37);
				b();
				setState(38);
				uno();
				setState(39);
				tres();
				setState(40);
				b();
				setState(41);
				c();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(43);
				dos();
				setState(44);
				c();
				setState(45);
				tres();
				setState(46);
				b();
				setState(47);
				c();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(49);
				tres();
				setState(50);
				b();
				setState(51);
				c();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(53);
				cuatro();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BContext extends ParserRuleContext {
		public DosContext dos() {
			return getRuleContext(DosContext.class,0);
		}
		public List<CContext> c() {
			return getRuleContexts(CContext.class);
		}
		public CContext c(int i) {
			return getRuleContext(CContext.class,i);
		}
		public TresContext tres() {
			return getRuleContext(TresContext.class,0);
		}
		public BContext b() {
			return getRuleContext(BContext.class,0);
		}
		public CincoContext cinco() {
			return getRuleContext(CincoContext.class,0);
		}
		public SeisContext seis() {
			return getRuleContext(SeisContext.class,0);
		}
		public BprimaContext bprima() {
			return getRuleContext(BprimaContext.class,0);
		}
		public CuatroContext cuatro() {
			return getRuleContext(CuatroContext.class,0);
		}
		public BContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_b; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof punto2GrammarListener ) ((punto2GrammarListener)listener).enterB(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof punto2GrammarListener ) ((punto2GrammarListener)listener).exitB(this);
		}
	}

	public final BContext b() throws RecognitionException {
		BContext _localctx = new BContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_b);
		try {
			setState(82);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(57);
				dos();
				setState(58);
				c();
				setState(59);
				tres();
				setState(60);
				b();
				setState(61);
				c();
				setState(62);
				cinco();
				setState(63);
				c();
				setState(64);
				seis();
				setState(65);
				bprima();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(67);
				tres();
				setState(68);
				b();
				setState(69);
				c();
				setState(70);
				cinco();
				setState(71);
				c();
				setState(72);
				seis();
				setState(73);
				bprima();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(75);
				cuatro();
				setState(76);
				cinco();
				setState(77);
				c();
				setState(78);
				seis();
				setState(79);
				bprima();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(81);
				bprima();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CContext extends ParserRuleContext {
		public SieteContext siete() {
			return getRuleContext(SieteContext.class,0);
		}
		public BContext b() {
			return getRuleContext(BContext.class,0);
		}
		public CContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_c; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof punto2GrammarListener ) ((punto2GrammarListener)listener).enterC(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof punto2GrammarListener ) ((punto2GrammarListener)listener).exitC(this);
		}
	}

	public final CContext c() throws RecognitionException {
		CContext _localctx = new CContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_c);
		try {
			setState(88);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__6:
				enterOuterAlt(_localctx, 1);
				{
				setState(84);
				siete();
				setState(85);
				b();
				}
				break;
			case EOF:
			case T__2:
			case T__4:
			case T__5:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BprimaContext extends ParserRuleContext {
		public UnoContext uno() {
			return getRuleContext(UnoContext.class,0);
		}
		public TresContext tres() {
			return getRuleContext(TresContext.class,0);
		}
		public BContext b() {
			return getRuleContext(BContext.class,0);
		}
		public List<CContext> c() {
			return getRuleContexts(CContext.class);
		}
		public CContext c(int i) {
			return getRuleContext(CContext.class,i);
		}
		public CincoContext cinco() {
			return getRuleContext(CincoContext.class,0);
		}
		public SeisContext seis() {
			return getRuleContext(SeisContext.class,0);
		}
		public BprimaContext bprima() {
			return getRuleContext(BprimaContext.class,0);
		}
		public BprimaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bprima; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof punto2GrammarListener ) ((punto2GrammarListener)listener).enterBprima(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof punto2GrammarListener ) ((punto2GrammarListener)listener).exitBprima(this);
		}
	}

	public final BprimaContext bprima() throws RecognitionException {
		BprimaContext _localctx = new BprimaContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_bprima);
		try {
			setState(100);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(90);
				uno();
				setState(91);
				tres();
				setState(92);
				b();
				setState(93);
				c();
				setState(94);
				cinco();
				setState(95);
				c();
				setState(96);
				seis();
				setState(97);
				bprima();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UnoContext extends ParserRuleContext {
		public UnoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_uno; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof punto2GrammarListener ) ((punto2GrammarListener)listener).enterUno(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof punto2GrammarListener ) ((punto2GrammarListener)listener).exitUno(this);
		}
	}

	public final UnoContext uno() throws RecognitionException {
		UnoContext _localctx = new UnoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_uno);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DosContext extends ParserRuleContext {
		public DosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof punto2GrammarListener ) ((punto2GrammarListener)listener).enterDos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof punto2GrammarListener ) ((punto2GrammarListener)listener).exitDos(this);
		}
	}

	public final DosContext dos() throws RecognitionException {
		DosContext _localctx = new DosContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_dos);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TresContext extends ParserRuleContext {
		public TresContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tres; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof punto2GrammarListener ) ((punto2GrammarListener)listener).enterTres(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof punto2GrammarListener ) ((punto2GrammarListener)listener).exitTres(this);
		}
	}

	public final TresContext tres() throws RecognitionException {
		TresContext _localctx = new TresContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_tres);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CuatroContext extends ParserRuleContext {
		public CuatroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cuatro; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof punto2GrammarListener ) ((punto2GrammarListener)listener).enterCuatro(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof punto2GrammarListener ) ((punto2GrammarListener)listener).exitCuatro(this);
		}
	}

	public final CuatroContext cuatro() throws RecognitionException {
		CuatroContext _localctx = new CuatroContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_cuatro);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CincoContext extends ParserRuleContext {
		public CincoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cinco; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof punto2GrammarListener ) ((punto2GrammarListener)listener).enterCinco(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof punto2GrammarListener ) ((punto2GrammarListener)listener).exitCinco(this);
		}
	}

	public final CincoContext cinco() throws RecognitionException {
		CincoContext _localctx = new CincoContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_cinco);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SeisContext extends ParserRuleContext {
		public SeisContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_seis; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof punto2GrammarListener ) ((punto2GrammarListener)listener).enterSeis(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof punto2GrammarListener ) ((punto2GrammarListener)listener).exitSeis(this);
		}
	}

	public final SeisContext seis() throws RecognitionException {
		SeisContext _localctx = new SeisContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_seis);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SieteContext extends ParserRuleContext {
		public SieteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_siete; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof punto2GrammarListener ) ((punto2GrammarListener)listener).enterSiete(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof punto2GrammarListener ) ((punto2GrammarListener)listener).exitSiete(this);
		}
	}

	public final SieteContext siete() throws RecognitionException {
		SieteContext _localctx = new SieteContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_siete);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}